--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
         <h1>PDF. Simplified.</h1>
-        <p>Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-        <p><a class="btn primary large">Learn more &raquo;</a></p>
+        <p>Ever wanted to quickly generate a PDF report from your web application or website - without getting your hands dirty with complicated server-side tools?</p>
+	
+		<p>Just include a short snippet of code into your website and start generating PDFs right away.</p>
+        <p><a class="btn primary large">Get Started &raquo;</a></p>
       </div>
 
       <!-- Example row of columns -->
