--- a/examples/basic.html
+++ b/examples/basic.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 	<title>jsPDF</title>
-	<link rel="stylesheet" type="text/css" href="examples/css/smoothness/jquery-ui-1.8.17.custom.css">
-	<link rel="stylesheet" type="text/css" href="examples/css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.8.17.custom.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
-	<script type="text/javascript" src="examples/js/jquery/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript" src="examples/js/jquery/jquery-ui-1.8.17.custom.min.js"></script>
-	<script type="text/javascript" src="jspdf.js"></script>
-	<script type="text/javascript" src="examples/js/basic.js"></script>
+	<script type="text/javascript" src="js/jquery/jquery-1.7.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery/jquery-ui-1.8.17.custom.min.js"></script>
+	<script type="text/javascript" src="../libs/base64.js"></script>
+	<script type="text/javascript" src="../jspdf.js"></script>
+	<script type="text/javascript" src="js/basic.js"></script>
 	
 	<script>
 		$(function() {
