--- a/examples/basic.html
+++ b/examples/basic.html
@@ -298,7 +298,7 @@ var getImageFromUrl = function(url, callback) {
 	return ret;
 }
 
-// Since images are loaded asyncronously, we must wait to create
+// Since images are loaded asynchronously, we must wait to create
 // the pdf until we actually have the image data.
 // If we already had the jpeg image binary data loaded into
 // a string, we create the pdf without delay.
